--- a/internal/server/ui/components/file_explorer/file_viewer/component.templ
+++ b/internal/server/ui/components/file_explorer/file_viewer/component.templ
@@ -7,6 +7,7 @@ templ Component() {
 		hx-on:close="closeFileViewer(event)"
 		closedby="none"
 		hx-on:keydown="if (event.key === 'Enter') { preventDefault(event); }"
+		hx-on:click="if (event.target === event.currentTarget) { closeFileViewer(event); }"
 	>
 		<script src="/public/vendor/epub.js/jszip.min.js"></script>
 		<script src="/public/vendor/epub.js/epub.min.js"></script>
