--- a/internal/server/ui/components/file_explorer/view_content.templ
+++ b/internal/server/ui/components/file_explorer/view_content.templ
@@ -2,6 +2,7 @@ package file_explorer
 
 import (
 	"autobutler/internal/server/ui/components/file_explorer/column_view"
+	"autobutler/internal/server/ui/components/file_explorer/grid_view"
 	"autobutler/internal/server/ui/components/file_explorer/list_view"
 	"autobutler/internal/server/ui/types"
 	"autobutler/pkg/util"
@@ -15,6 +16,8 @@ templ ViewContent(pageState types.PageState, files []fs.FileInfo, view string) {
 	} else {
 		if view == "column" {
 			@column_view.Component(pageState, files)
+		} else if view == "grid" {
+			@grid_view.Component(pageState, files)
 		} else {
 			@list_view.Component(pageState, files)
 		}
