--- a/internal/server/ui/components/file_explorer/breadcrumb.templ
+++ b/internal/server/ui/components/file_explorer/breadcrumb.templ
@@ -49,6 +49,7 @@ templ Breadcrumb(pageState types.PageState, view string) {
 				name="folderName"
 				class="file-explorer-folder-input hidden"
 				placeholder="New folder name"
+				maxlength="255"
 				hx-include="[name='folderName']"
 				hx-post={ filepath.Join("/api/v1/folder/files", pageState.RootDir) }
 				hx-target="#file-explorer-view-content"
@@ -104,6 +105,7 @@ templ BreadcrumbOOB(pageState types.PageState, view string) {
 				name="folderName"
 				class="file-explorer-folder-input hidden"
 				placeholder="New folder name"
+				maxlength="255"
 				hx-include="[name='folderName']"
 				hx-post={ filepath.Join("/api/v1/folder/files", pageState.RootDir) }
 				hx-target="#file-explorer-view-content"
