--- a/internal/server/ui/components/bottomnav/component.templ
+++ b/internal/server/ui/components/bottomnav/component.templ
@@ -1,8 +1,6 @@
 package bottomnav
 
-import (
-	"autobutler/internal/server/ui/types"
-)
+import "autobutler/internal/server/ui/types"
 
 templ Component(pageState types.PageState) {
 	<nav class="bottomnav">
@@ -42,4 +40,3 @@ templ Component(pageState types.PageState) {
 		</ul>
 	</nav>
 }
-
