--- a/internal/server/ui/components/service_icons/component.templ
+++ b/internal/server/ui/components/service_icons/component.templ
@@ -1,8 +1,6 @@
 package service_icons
 
-import (
-	"autobutler/internal/server/ui/types"
-)
+import "autobutler/internal/server/ui/types"
 
 templ Component(icons []types.ServiceIcon) {
 	<div class="service-icons-container">
