--- a/internal/server/ui/components/file_explorer/grid_view/component.templ
+++ b/internal/server/ui/components/file_explorer/grid_view/component.templ
@@ -36,6 +36,7 @@ templ renderGridItem(pageState types.PageState, file fs.FileInfo) {
 		class={ "grid-view-item file-node", templ.KV("grid-view-item--folder", isFolder) }
 		data-name={ fileName }
 		data-is-folder={ fmt.Sprintf("%t", isFolder) }
+		hx-on:contextmenu="toggleFloatingContextMenu(event, this)"
 	>
 		if isFolder {
 			<a
@@ -61,9 +62,21 @@ templ renderGridItem(pageState types.PageState, file fs.FileInfo) {
 				hx-swap="innerHTML"
 				hx-on:click="document.getElementById('file-viewer').showModal();"
 			>
-				<div class="grid-view-icon-container">
-					@renderFileIcon(fileType)
-				</div>
+				if fileType == util.FileTypeImage {
+					{{thumbnailPath := filepath.Join("/api/v1/thumbnails", pageState.RootDir, fileName)}}
+					<div class="grid-view-thumbnail-container">
+						<img
+							class="grid-view-thumbnail"
+							src={ thumbnailPath }
+							alt={ fileName }
+							loading="lazy"
+						/>
+					</div>
+				} else {
+					<div class="grid-view-icon-container">
+						@renderFileIcon(fileType)
+					</div>
+				}
 				<div class="grid-view-details">
 					<div class="grid-view-name" title={ fileName }>{ fileName }</div>
 					if !isFolder && fileSize != "" {
